SFDC_LD_Packages/objects-layouts/main/default/objects/Bizzabo_Ticket__c/Bizzabo_Ticket__c.object-meta.xml
<CustomObject>
    <label>Bizzabo Ticket</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Bizzabo Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bizzabo Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>