SFDC_LD_Packages/objects-layouts/main/default/objects/Bizzabo_Ticket__c/fields/Bizzabo_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Bizzabo_Ticket_Number__c</fullName>
    <externalId>true</externalId>
    <label>Bizzabo Ticket Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>