SFDC_LD_Packages/objects-layouts/main/default/objects/Bizzabo_Ticket__c/fields/ContactBizzabo__c.field-meta.xml
<CustomField>
    <fullName>ContactBizzabo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactBizzabo</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bizzabo Tickets</relationshipLabel>
    <relationshipName>Bizzabo_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>