SFDC_LD_Packages/objects-layouts/main/default/objects/Bizzabo_Ticket__c/fields/LeadBizzabo__c.field-meta.xml
<CustomField>
    <fullName>LeadBizzabo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LeadBizzabo</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Bizzabo Tickets</relationshipLabel>
    <relationshipName>Bizzabo_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>